iptables-1.8.4-r0/ip6tables.rules
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i wpan+ -p udp -m udp --dport 53 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -i wpan+ -p udp -m udp --dport 67 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p icmpv6 -j ACCEPT
-A INPUT -p udp -m udp --dport 1900 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m udp --dport 5353 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m udp --dport 5540 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m udp --dport 5541 -m conntrack --ctstate  NEW -j ACCEPT
-A INPUT -p udp -m udp --dport 10000 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m udp --dport 49154 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m udp --dport 61631 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8000 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8082 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8443 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9000 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp --dport 1 -j ACCEPT
-A OUTPUT -p udp --dport 1 -j ACCEPT
-A OUTPUT -p tcp --dport 2 -j ACCEPT
-A OUTPUT -p udp --dport 2 -j ACCEPT
-A OUTPUT -p tcp --dport 12 -j ACCEPT
-A OUTPUT -p udp --dport 12 -j ACCEPT
-A OUTPUT -p tcp --dport 13 -j ACCEPT
-A OUTPUT -p udp --dport 13 -j ACCEPT
-A OUTPUT -p tcp --dport 16 -j ACCEPT
-A OUTPUT -p udp --dport 16 -j ACCEPT
-A OUTPUT -p tcp --dport 22 -j ACCEPT
-A OUTPUT -p udp --dport 22 -j ACCEPT
-A OUTPUT -p tcp --dport 30 -j ACCEPT
-A OUTPUT -p udp --dport 30 -j ACCEPT
-A OUTPUT -p tcp --dport 123 -j ACCEPT
-A OUTPUT -p udp --dport 123 -j ACCEPT
-A OUTPUT -p tcp --dport 191 -j ACCEPT
-A OUTPUT -p udp --dport 191 -j ACCEPT
-A OUTPUT -p tcp --dport 250 -j ACCEPT
-A OUTPUT -p udp --dport 250 -j ACCEPT
-A OUTPUT -p tcp --dport 443 -j ACCEPT
-A OUTPUT -p udp --dport 443 -j ACCEPT
-A OUTPUT -p tcp --dport 1900 -j ACCEPT
-A OUTPUT -p udp --dport 1900 -j ACCEPT
-A OUTPUT -p tcp --dport 3000 -j ACCEPT
-A OUTPUT -p udp --dport 3000 -j ACCEPT
-A OUTPUT -p tcp --dport 4905 -j ACCEPT
-A OUTPUT -p udp --dport 4905 -j ACCEPT
-A OUTPUT -p tcp --dport 6812 -j ACCEPT
-A OUTPUT -p udp --dport 6812 -j ACCEPT
-A OUTPUT -p tcp --dport 8443 -j ACCEPT
-A OUTPUT -p udp --dport 8443 -j ACCEPT
-A OUTPUT -p tcp --dport 9000 -j ACCEPT
-A OUTPUT -p udp --dport 9000 -j ACCEPT
-A OUTPUT -p tcp --dport 9001 -j ACCEPT
-A OUTPUT -p udp --dport 9001 -j ACCEPT
-A OUTPUT -p tcp --dport 9005 -j ACCEPT
-A OUTPUT -p udp --dport 9005 -j ACCEPT
-A OUTPUT -p tcp --dport 9030 -j ACCEPT
-A OUTPUT -p udp --dport 9030 -j ACCEPT
-A OUTPUT -p tcp --dport 10001 -j ACCEPT
-A OUTPUT -p udp --dport 10001 -j ACCEPT
-A OUTPUT -p tcp --dport 13791 -j ACCEPT
-A OUTPUT -p udp --dport 13791 -j ACCEPT
-A OUTPUT -p tcp --dport 13344 -j ACCEPT
-A OUTPUT -p udp --dport 13344 -j ACCEPT
-A OUTPUT -p tcp --dport 19788 -j ACCEPT
-A OUTPUT -p udp --dport 19788 -j ACCEPT
-A OUTPUT -p tcp --dport 32836:32898 -j ACCEPT
-A OUTPUT -p udp --dport 32836:32898 -j ACCEPT
-A OUTPUT -p tcp --dport 39986:43514 -j ACCEPT
-A OUTPUT -p udp --dport 39986:43514 -j ACCEPT
-A OUTPUT -p tcp --dport 48718:48968 -j ACCEPT
-A OUTPUT -p udp --dport 48718:48968 -j ACCEPT
-A OUTPUT -p tcp --dport 58194:58236 -j ACCEPT
-A OUTPUT -p udp --dport 58194:58236 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 1900 -m conntrack --ctstate NEW -j ACCEPT
-A OUTPUT -p udp -m udp --dport 5353 -m conntrack --ctstate NEW -j ACCEPT
-A OUTPUT -p udp -m udp --dport 5540 -m conntrack --ctstate NEW -j ACCEPT
-A OUTPUT -p udp -m udp --dport 5541 -m conntrack --ctstate  NEW -j ACCEPT
-A OUTPUT -p udp -m udp --dport 10000 -m conntrack --ctstate NEW -j ACCEPT
-A OUTPUT -p udp -m udp --dport 49154 -m conntrack --ctstate NEW -j ACCEPT
-A OUTPUT -p udp -m udp --dport 61631 -m conntrack --ctstate NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 8000 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 8082 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 8443 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 9000 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 9980 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A OUTPUT -p udp -m udp --dport 9980 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -p udp -m udp --dport 5540 -m conntrack --ctstate NEW -j ACCEPT
COMMIT
